<resources>
    <string name="app_name">IMKFSDK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recorder_normal">按住 说话</string>
    <string name="recorder_recording">松开 手指</string>
    <string name="recorder_want_cancel">松开手指，取消发送</string>
    <string name="investigate">请您对本次服务做出评价, 点击对应选项即可完成评价</string>
    <string name="logout">注销</string>
    <string name="topeople">转人工</string>
    <string name="send">发送</string>
    <string name="numbers01">当前咨询人数较多,你排在第</string>
    <string name="number02">位</string>
    <string name="good_7moor">有问题 找客服</string>
    <string name="im_sdk_kf">即时联系在线客服</string>
    <string name="video_voice_text">视频、语音、文字、表情、图片、文件</string>
    <string name="all_not_string">通通不是事儿！</string>
    <string name="contact_im">联系客服</string>
    <string name="name">姓名</string>
    <string name="writedrown_msg">对方撤回了一条消息</string>
    <string name="titlename">标题</string>
    <string name="content">内容</string>
    <string name="nohelp">没帮助</string>
    <string name="yeshelp">有帮助</string>
    <string name="close">关闭</string>
    <string name="leavemsg">留言板</string>
    <string name="pleaseleavemsg">请留言~</string>
    <string name="submit_leavemsg">提交留言</string>
    <string name="cancelsend">手指上滑 取消发送</string>
    <string name="good">好评</string>
    <string name="file_name">字段名</string>
    <string name="very_satisfaction">非常满意</string>
    <string name="satisfaction">满意</string>
    <string name="not_satisfaction">不满意</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="complete">完成</string>
    <string name="now_robit">当前是机器人为你服务</string>
    <string name="other_writing">对方正在输入...</string>
    <string name="people_not_online">当前客服不在线</string>
    <string name="people_now">当前是客服为你服务</string>
    <string name="people_isleave">客服结束会话</string>
    <string name="chat_img">图库</string>
    <string name="chat_evaluate">评价</string>
    <string name="chat_question">常见问题</string>
    <string name="nothing_evaluate" translatable="false">评价列表为空</string>
    <string name="chat_file">文件</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="doyouneed">客服结束了会话，你想要</string>
    <string name="continuecall">继续咨询</string>
    <string name="back">退出</string>
    <string name="doyouneedother">你的专属座席不在线，是否需要其它座席服务</string>
    <string name="need">需要</string>
    <string name="noneed">不需要</string>
    <string name="topeoplesucceed">转人工服务成功</string>
    <string name="sendfiletoobig">上传文件不能大于200MB</string>
    <string name="seiveceforyou">为您服务</string>
    <string name="receivepeopleaction">接收到人工干预</string>
    <string name="iknow">我知道了</string>
    <string name="thinks_01">很高兴为您解决了问题！</string>
    <string name="thinks_02">非常抱歉没有解决您的问题！</string>
    <string name="url_failure">链接不正确！</string>
    <string name="evaluate_succeed">评价成功</string>
    <string name="haddownload">已下载</string>
    <string name="downloading">下载中...</string>
    <string name="sended">已发送</string>
    <string name="notpermession">权限不足！</string>
    <string name="notnetwork">当前没有网络连接</string>
    <string name="sorryconfigurationiswrong">对不起，由于在线咨询配置错误，暂时无法进行咨询...</string>
    <string name="sdkinitwrong">客服初始化失败</string>
    <string name="reading">加载中...</string>
    <string name="peer_no_number">技能组无坐席</string>
    <string name="satisfy_title" translatable="false">感谢您使用我们的服务，请为此次服务评价！</string>
    <string name="satisfy_thank" translatable="false">感谢您对此次服务做出评价，祝您生活愉快，再见！</string>
    <string name="wait_link">等待接入</string>
    <string name="open_camera">请打开相机权限</string>
    <string name="voice_to_text_error">语音转文本失败</string>
    <string name="voice_to_text_btn">转文字</string>
    <string name="voice_input">语音输入</string>
    <string name="ykf_copy_num">复制号码</string>
    <string name="ykf_copyok">已复制</string>
    <string name="ykf_call">呼叫</string>
    <string name="ykf_read">已读</string>
    <string name="ykf_unread">未读</string>
    <string name="ykf_maybe_telphone">可能是一个电话号码,你可以</string>
    <string name="ykf_no_imagepick">手机中可能没有相册</string>



    <string name="ykf_nologin_timeout">由于您长时间未接入，会话已被系统关闭~</string>
    <string name="ykf_nonetwork_error">系统监测到网络异常，你可能收不到客服消息，请退出重试~</string>
    <string name="ykf_recording_error">录音失败，请再次重试</string>
    <string name="ykf_notify_otheragent">已通知其它座席为你服务</string>
    <string name="ykf_notify_otheragent_fail">通知其它座席失败</string>
    <string name="ykf_not_robot_send">非机器人对话，不可发送该消息</string>
    <string name="ykf_not_netwokr_error">检测到您网络异常啦</string>
    <string name="ykf_httpfun_error">获取接口错误</string>
    <string name="ykf_evaluation_timeout">评价已超时</string>
    <string name="ykf_evaluation_robot">评价机器人服务</string>
    <string name="ykf_solved_ok">已解决</string>
    <string name="ykf_solved_fail">未解决</string>
    <string name="ykf_robot_evaluation_ok">机器人评价成功</string>
    <string name="ykf_robot_evaluation_fail">机器人评价失败</string>
    <string name="ykf_chatbegin_fail">开启会话失败</string>
    <string name="ykf_not_support_file">暂不支持此类文件</string>
    <string name="ykf_select_scu">选择日程</string>
    <string name="ykf_select_peer">选择技能组</string>
    <string name="ykf_chatfinish_reopen">当前会话已经关闭,是否重新开启会话</string>
    <string name="ykf_chatbegin">开始会话</string>
    <string name="ykf_chatbegin_reconnect">重新接入</string>
    <string name="ykf_loadmore_fail">加载更多失败</string>
    <string name="ykf_autotext_fail_reclick">:转换文字失败,请点击重新转换</string>
    <string name="ykf_autotext_fail_nocheck">:未识别语音消息</string>
    <string name="ykf_autotext_fail_solong">:语音过长，暂时无法转换</string>
    <string name="ykf_submit_review">提交评价</string>
    <string name="ykf_submit_thanks">感谢您使用我们的服务，请为此次服务评价！</string>
    <string name="ykf_submit_thankbay">感谢您对此次服务做出评价，祝您生活愉快，再见！</string>
    <string name="ykf_submit_reviewreason">请填写满意度评价原因</string>
    <string name="ykf_submit_reviewtag">请选择满意度评价标签</string>
    <string name="ykf_submit_reviewchoose">请选择评价选项</string>
    <string name="ykf_submit_reviewfail">评价提交失败</string>
    <string name="ykf_wait">请稍等...</string>
    <string name="ykf_no_data">没有数据</string>
    <string name="ykf_no_datamore">没有更多数据了</string>
    <string name="ykf_save_pic">保存图片</string>
    <string name="ykf_save_pic_ok">保存图片成功</string>
    <string name="ykf_save_pic_fail">保存图片失败，请稍后重试</string>
    <string name="ykf_please_leavemessage">请留言</string>
    <string name="ykf_please_leavemessage_replay">请留言，我们将尽快联系您</string>
    <string name="ykf_please_required">是必填项</string>
    <string name="ykf_up_leavemessageok">提交留言成功</string>
    <string name="ykf_up_leavemessage_fail">提交留言失败</string>
    <string name="ykf_put_edit">请输入内容</string>
    <string name="ykf_find_your_order">请选择您想要查询的订单</string>
    <string name="ykf_noexpress">暂无物流信息</string>
    <string name="ykf_lookmore">查看更多</string>
    <string name="ykf_look_express">查看完整物流信息</string>
    <string name="ykf_reselect">重新选择</string>
    <string name="ykf_waybill_number">运单号:</string>
    <string name="ykf_sendto_agent">发给坐席</string>
    <string name="ykf_have_been_received">已签收</string>
    <string name="ykf_copy">复制</string>
    <string name="ykf_copy_success">已经复制到粘贴板</string>
    <string name="ykf_call_time">通话时长:</string>
    <string name="ykf_video_cancle">视频会话已取消</string>
    <string name="ykf_video_refuse">对方拒绝了视频邀请</string>
    <string name="ykf_video_send">对方发送的视频</string>
    <string name="ykf_video_publish">发出的视频</string>
    <string name="ykf_nopeer">无技能组</string>
    <string name="ykf_now_back">返回</string>

</resources>
