<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_bottom_sheet"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_num_pop_num"
            android:textColor="@color/color_666666"
            android:gravity="center"
            android:textSize="15sp"
            android:text=" "
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#F0F0F5"
            ></TextView>
        <TextView
            android:id="@+id/tv_callnum"
            android:textColor="@color/color_333333"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/ykf_call"
            android:layout_width="match_parent"
            android:layout_height="54dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#F0F0F5"
            ></TextView>
        <TextView
            android:id="@+id/tv_copynum"
            android:textColor="@color/color_333333"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/ykf_copy_num"
            android:layout_width="match_parent"
            android:layout_height="54dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#F0F0F5"
            ></TextView>
        <TextView
            android:id="@+id/tv_backnum"
            android:textColor="@color/color_333333"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="54dp">
        </TextView>
    </LinearLayout>
</RelativeLayout>