<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
     android:padding="18dp"
    >


    <ScrollView
        android:fadeScrollbars="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/investigate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:text="@string/satisfy_title" />


        <LinearLayout
            android:id="@+id/investigate_tag_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/investigate_title"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/investigate_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <com.m7.imkfsdk.view.TagView
                android:id="@+id/investigate_second_tg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_below="@+id/investigate_tag_ll"
            android:id="@+id/rl_btn"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColorHint="#a6a6a6"
                android:hint="请输入评价内容"
                android:id="@+id/investigate_et"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@drawable/kf_investigate_edittext"
                android:gravity="top"
                android:padding="2dp"
                android:maxLength="120"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/investigate_btn_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/investigate_et"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/investigate_save_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="115dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/investigate_cancel_btn"
                    android:background="@drawable/kf_investigate_ok_btn"
                    android:text="@string/ykf_submit_review"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/investigate_cancel_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="72dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/kf_investigate_cancel_btn"
                    android:text="@string/cancel"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
    </ScrollView>


</RelativeLayout>