<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/chatting_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:textSize="10sp" />

    <RelativeLayout
        android:id="@+id/chart_from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatting_time_tv"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/chatting_avatar_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/kf_head_default_robot" />

        <TextView
            android:id="@+id/chatfrom_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:text="@string/name"
            android:textColor="@color/all_black"
            android:textSize="10sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/kf_chat_rich_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chatfrom_tv_name"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:background="@drawable/kf_chatfrom_bg_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kf_chat_rich_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/ykf_find_your_order"
                android:textColor="@color/color_333333"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/ll_order_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/view_top"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/color_ebebeb" />

                <RelativeLayout
                    android:id="@+id/rl_progress_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_logistics_progress_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/all_black"
                        android:textSize="14sp"
                        tools:text="天天快递" />

                    <TextView
                        android:id="@+id/tv_logistics_progress_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_logistics_progress_name"
                        android:layout_alignLeft="@id/tv_logistics_progress_name"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:textColor="@color/all_black"
                        android:textSize="14sp"
                        tools:text="运单号：2019081272332" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/tv_logistics_progress_num"
                        android:layout_alignLeft="@id/tv_logistics_progress_name"
                        android:layout_marginTop="12dp"
                        android:background="@color/color_ebebeb" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ykf_noexpress"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_logistics_rx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

                <View
                    android:id="@+id/view_middle"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_ebebeb" />

                <RelativeLayout
                    android:id="@+id/rl_logistics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/kf_chat_rich_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginBottom="9dp"
                        android:text="@string/ykf_lookmore"
                        android:textColor="@color/color_2684FF"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/kf_chat_rich_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/icon_checkmore" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/chatting_withdraw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatting_time_tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:text="@string/writedrown_msg"
        android:textSize="12sp"
        android:visibility="gone" />

</RelativeLayout>