<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:indicator="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/chatting_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:textSize="10sp" />

    <RelativeLayout
        android:id="@+id/chart_from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatting_time_tv"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/chatting_avatar_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/kf_head_default_robot" />

        <TextView
            android:id="@+id/chatfrom_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:text="@string/name"
            android:textColor="@color/all_black"
            android:textSize="10sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chatfrom_tv_name"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:background="@drawable/kf_chatfrom_bg_normal">

            <LinearLayout
                android:id="@+id/chart_content_lin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp">
            </LinearLayout>
            <!--有无帮助-->
            <RelativeLayout
                android:id="@+id/chat_rl_robot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chart_content_lin"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/chat_ll_robot_useless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/chat_iv_robot_useless"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginRight="2dp"
                        android:src="@drawable/kf_robot_useless_grey" />

                    <TextView
                        android:id="@+id/chat_tv_robot_useless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/nohelp"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chat_ll_robot_useful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@id/chat_ll_robot_useless"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/chat_iv_robot_useful"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginRight="2dp"
                        android:src="@drawable/kf_robot_useful_blue" />

                    <TextView
                        android:id="@+id/chat_tv_robot_useful"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/yeshelp"
                        android:textColor="@color/robot_blue"
                        android:textSize="12sp" />
                </LinearLayout>
            </RelativeLayout>
            <!--最下面，很高兴为您解决了问题-->
            <RelativeLayout
                android:id="@+id/chat_rl_robot_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chat_rl_robot">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/chat_tv_robot_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/thinks_01"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

            </RelativeLayout>
            <!--带有button的xbot-->

            <LinearLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/ll_flow"
                android:layout_width="wrap_content"
                android:layout_height="236dp"
                android:layout_below="@id/chart_content_lin"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp" />
                <!--圆点指示器-->

                <com.m7.imkfsdk.view.PointBottomView
                    android:id="@+id/point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    indicator:circleInterval="10dp"
                    indicator:fillColor="#F96A0E"
                    indicator:radius="5dp"
                    indicator:strokeColor="#cecece" />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/chatting_withdraw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatting_time_tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:text="@string/writedrown_msg"
        android:textSize="12sp"
        android:visibility="gone" />

</RelativeLayout>